Smaller improvements and fixes:
- Expr is now evaluated by WolframAlpha (instead of Google Search)
- improve handling of missing K6nele
- fix URI encoding
- fix behaviour of the widget on orientation change
- some clean up based on lint